--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -6,5 +6,7 @@ jobs:
   Explore-Gitea-Actions:
     runs-on: riscv-ubuntu
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
       -run: zig build --summary=all
       -run: zig test
