--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,11 +4,9 @@ on: [push]
 
 jobs:
   Build-Zigvulkan:
-    runs-on: riscv-ubuntu
+    runs-on: riscv-ubuntu-max
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: sudo apt update -qq
-      - run: sudo apt install -y --no-install-recommends libsdl2-2.0-0 libsdl2-dev libcglm0 libcglm-dev libvulkan1 libvulkan-dev vulkan-validationlayers vulkan-validationlayers-dev
       - run: zig build --summary all
       - run: zig test
