moved to archlinux image and removed old github workflow

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   Build-Zigvulkan:
-    runs-on: riscv-ubuntu-max
+    runs-on: archlinux-base
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
